--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.40.1",
+    "clsx": "^2.1.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "swiper": "^11.1.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
