--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@tanstack/react-query": "^5.40.1",
     "clsx": "^2.1.1",
+    "i18next": "^23.11.5",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^14.1.2",
     "swiper": "^11.1.4",
     "tailwind-merge": "^2.3.0",
     "zustand": "^4.5.2"
