feat: add  dev, test run environment

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_ENV=development next dev",
+    "test": "NODE_ENV=test next start",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
