--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.40.1",
     "axios": "^1.7.2",
+    "broadcast-channel": "^7.0.0",
     "clsx": "^2.1.1",
     "i18next": "^23.11.5",
     "next": "14.2.3",
