--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^14.1.2",
+    "snake-camel": "^1.0.8",
     "swiper": "^11.1.4",
     "tailwind-merge": "^2.3.0",
     "zustand": "^4.5.2"
