--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "NODE_ENV=development next dev",
-    "test": "NODE_ENV=test next start",
+    "test": "NODE_ENV=test next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
