--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.4",
     "@tanstack/react-query": "^5.40.1",
     "axios": "^1.7.2",
     "broadcast-channel": "^7.0.0",
