--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "NODE_ENV=test next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pm2:test": "pm2 start \"npm run test\" --name LetterU-Test"
   },
   "dependencies": {
     "@headlessui/react": "^2.0.4",
@@ -19,6 +20,7 @@
     "html-to-image": "^1.11.11",
     "i18next": "^23.11.5",
     "next": "14.2.3",
+    "pm2": "^5.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^14.1.2",
