--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.11",
     "html-to-image": "^1.11.11",
     "i18next": "^23.11.5",
+    "nanoid": "^5.0.7",
     "next": "14.2.3",
     "pm2": "^5.4.1",
     "react": "^18",
