--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18",
     "react-i18next": "^14.1.2",
     "react-loader-spinner": "^6.1.6",
+    "react-toastify": "^10.0.5",
     "snake-camel": "^1.0.8",
     "swiper": "^11.1.4",
     "tailwind-merge": "^2.3.0",
